[project]
name = "csv_to_postgres"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "dagster",
    "dagster-cloud",
    "dagster-webserver>=1.11.10",
    "dlt[duckdb,filesystem,postgres,s3]>=1.12.1",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver",
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "csv_to_postgres.definitions"
code_location_name = "csv_to_postgres"

[tool.setuptools.packages.find]
exclude=["csv_to_postgres_tests"]
